--- a/references.bib
+++ b/references.bib
@@ -1473,10 +1473,14 @@
 	doi = {10.1007/978-0-387-40065-5},
 }
 
-@software{chuang_dissertation_nodate,
-	title = {Dissertation Reporducibility Pack, https://github.com/piyueh/dissertation-repro-pack},
-	url = {https://github.com/piyueh/dissertation-repro-pack},
-	author = {Chuang, Pi-Yueh}
+@misc{chuang_dissertation_nodate,
+	title = {Repro-Pack for Feasibility Study of Physics-Informed Neural Network Modeling in Computational Fluid Dynamics},
+	url = {https://doi.org/10.5281/zenodo.7388327},
+	publisher = {Zenodo},
+	author = {Chuang, Pi-Yueh},
+	date = {2022-12},
+	doi = {10.5281/zenodo.7388327},
+	note = {Version Number: 20221201},
 }
 
 @article{meurer_sympy_2017,
