--- a/main.tex
+++ b/main.tex
@@ -50,134 +50,11 @@
 % document body
 \begin{document}
 
-\chapter{Introduction}
-
-    \section{Overview}\label{sec:overview}
-    \input{chapter.1/section.1.1.tex}
-
-    \section{Physics-Informed Neural Networks (PINNs)}\label{sec:pinn-review}
-    \input{chapter.1/section.1.2.tex}
-
-    \section{Issues and Open Questions in PINNs}\label{sec:pinn-issues}
-    \input{chapter.1/section.1.3.tex}
-
-    \section{Motivation and Research Aims}\label{sec:aims}
-    \input{chapter.1/section.1.4.tex}
-
-\chapter{PetIBM: a Distributed-GPU Incompressible Navier-Stokes Solver}\label{chap:petibm}
-\input{chapter.2/summary.tex}
-
-    \section{Decoupled Immersed-Boundary Projection Method}\label{sec:petibm-math}
-    \input{chapter.2/section.2.1.tex}
-
-    \section{Implementation Details}\label{sec:petibm-impl}
-    \input{chapter.2/section.2.2.tex}
-
-    \section{Verification and Validation}\label{sec:petibm-vv}
-    \input{chapter.2/section.2.3.tex}
-
-    \section{Performance Benchmarks}\label{sec:petibm-perf}
-    \input{chapter.2/section.2.4.tex}
-
-\chapter{PINNs and Details of the Methods Used in This Work}\label{chap:pinn}
-
-    \section{Solution Workflow}\label{sec:pinn-workflow-overview}
-
-        \subsection{Overview}\label{sec:pinn-overview}
-        \input{chapter.3/section.3.1.1.tex}
-
-        \subsection{Batched Training}\label{sec:batched-training}
-        \input{chapter.3/section.3.1.2.tex}
-
-        \subsection{Adaptive Loss Aggregation}\label{sec:loss-annealing}
-        \input{chapter.3/section.3.1.3.tex}
-
-    \section{Deep Neural Network Modeling}\label{sec:pinn-dnnm}
-
-        \subsection{Multilayer Perceptron Networks}\label{sec:mlp}
-        \input{chapter.3/section.3.2.1.tex}
-
-        \subsection{Handling of Periodic Boundaries}\label{sec:periodic-boundary}
-        \input{chapter.3/section.3.2.2.tex}
-
-        \subsection{Automatic Differentiation}\label{sec:ad}
-        \input{chapter.3/section.3.2.3.tex}
-
-    \section{Other Training Strategies}
-    \input{chapter.3/section.3.3.tex}
-
-        \subsection{Cyclical Learning Rates and Stochastic Weight Averaging}\label{sec:cyclic-swa}
-        \input{chapter.3/section.3.3.1.tex}
-
-        \subsection{Nonlinear Conjugate-Gradient Optimizer and Line Search}\label{sec:ncg}
-        \input{chapter.3/section.3.3.2.tex}
-
-    \section{Remarks on Differences and Similarities with Conventional Numerical Methods}\label{sec:pinn-diff}
-    \input{chapter.3/section.3.4.tex}
-
-    \section{Code Implementation}\label{sec:pinn-code-impl}
-    \input{chapter.3/section.3.5.tex}
-
-\chapter{Computational Experiments and Benchmarks}\label{chap:pinn-cases}
-
-    \section{2D Taylor-Green Vortex}\label{sec:pinn-2d-tgv}
-
-        \subsection{Problem Description and PINN Configurations}
-        \label{sec:pinn-2d-tgv-intro}
-        \input{chapter.4/section.4.1.1.tex}
-
-        \subsection{Result Visualizations}
-        \label{sec:pinn-2d-tgv-vis}
-        \input{chapter.4/section.4.1.2.tex}
-
-        \subsection{Parallel Scalability}
-        \label{sec:pinn-2d-tgv-scaling}
-        \input{chapter.4/section.4.1.3.tex}
-
-        \subsection{Aggregate Loss and Prediction Accuracy}
-        \label{sec:pinn-2d-tgv-loss-vs-accuracy}
-        \input{chapter.4/section.4.1.4.tex}
-
-        \subsection{Model Complexity, Batch Sizes, and Time Costs}
-        \label{sec:pinn-2d-tgv-model-complexity}
-        \input{chapter.4/section.4.1.5.tex}
-
-        \subsection{Training Strategy Investigation}
-        \label{sec:pinn-2d-tgv-training-strategy}
-        \input{chapter.4/section.4.1.6.tex}
-
-    \section{Steady 2D Cylinder Flow: \texorpdfstring{$Re=40$}{re40}}
-    \label{sec:pinn-2d-cylinder-re40}
-
-        \subsection{Problem Description and Configurations}
-        \label{sec:pinn-2d-cylinder-re40-conf}
-        \input{chapter.4/section.4.2.1.tex}
-
-        \subsection{Results}
-        \label{sec:pinn-2d-cylinder-re40-results}
-        \input{chapter.4/section.4.2.2.tex}
-
-    \section{Unsteady 2D Cylinder Flow: Vortex Shedding at \texorpdfstring{$Re=200$}{re200}}
-    \label{sec:pinn-2d-cylinder-re200}
-
-        \subsection{Problem Description and Configurations}
-        \label{sec:pinn-2d-cylinder-re200-conf}
-        \input{chapter.4/section.4.3.1.tex}
-
-        \subsection{Results}
-        \label{sec:pinn-2d-cylinder-re200-results}
-        \input{chapter.4/section.4.3.2.tex}
-
-        \subsection{Spectral and Koopman Analysis}
-        \label{sec:pinn-2d-cylinder-re200-koopman}
-        \input{chapter.4/section.4.3.3.tex}
-
-        \subsection{Comments}
-        \label{sec:pinn-2d-cylinder-re200-comment}
-        \input{chapter.4/section.4.3.4.tex}
-
-\chapter{Discussion and Conclusion}\label{chap:discussion}
-\input{chapter.5.tex}
+\include{chapter.1/chapter.1.tex}
+\include{chapter.2/chapter.2.tex}
+\include{chapter.3/chapter.3.tex}
+\include{chapter.4/chapter.4.tex}
+\include{chapter.5.tex}
 
 \sloppy
 \printbibliography[heading=bibintoc, title=References]
