--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -24,9 +24,9 @@ In both physical experiments and conventional CFD simulations, such a flow event
 We wanted to understand PINNs' accuracy in predicting such unsteady solutions.
 Benchmarks in this group used three types of PINNs:
 \begin{enumerate*}[label=(\arabic*)]
-    \item a steady data-free PINN,
-    \item an unsteady data-free PINN, and
-    \item an unsteady data-driven PINN trained against both the Navier-Stokes equations and simulation data from PetIBM.
+    \item a steady data\hyp{}free PINN,
+    \item an unsteady data\hyp{}free PINN, and
+    \item an unsteady data\hyp{}driven PINN trained against both the Navier\hyp{}Stokes equations and simulation data from PetIBM.
 \end{enumerate*}
 In addition, we used a 2D cylinder flow at $Re=40$, which does not have instabilities, to validate the steady and unsteady data-free PINNs' capabilities in flow with immersed bodies.
 
