--- a/tables/tgv-2d-re100/scaling-tests/weak-scaling.tex
+++ b/tables/tgv-2d-re100/scaling-tests/weak-scaling.tex
@@ -11,6 +11,7 @@
     The $L_{2, sp-t}$ errors were the overall spatial-temporal errors at the last training iteration.%
 }
 \label{table:weak-scaling-perf}
+\small
 \begin{tabular}{lcccccccc}
 \toprule
  & \multicolumn{4}{c}{(2, 32, 8192)} & \multicolumn{4}{c}{(3, 128, 8192)} \\
@@ -28,4 +29,5 @@ $L_{2,sp-t}$, $u$ & 1.9e-01 & 1.5e-01 & 1.2e-01 & 1.7e-01 & 1.3e-02 & 1.3e-02 & 
 $L_{2,sp-t}$, $v$ & 1.9e-01 & 1.5e-01 & 1.3e-01 & 1.8e-01 & 1.1e-02 & 1.2e-02 & 1.1e-02 & 9.6e-03 \\
 \bottomrule
 \end{tabular}
+\normalsize
 \end{table}
